--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "webpack": "^5.0.0",
+    "fork-ts-checker-webpack-plugin": "^6.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
