--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
   },
   "dependencies": {
     "@nestjs/class-validator": "^0.13.4",
-    "@nestjs/common": "^10.3.10",
+    "@nestjs/common": "^10.4.1",
     "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.3.10",
+    "@nestjs/core": "^10.4.1",
     "@nestjs/microservices": "^10.3.10",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.3.10",
     "@nestjs/swagger": "^7.4.0",
+    "@ssut/nestjs-sqs": "^3.0.0",
+    "aws-sdk": "^2.1690.0",
     "class-validator": "^0.14.1",
     "mongoose": "^8.5.0",
     "reflect-metadata": "^0.1.13",
@@ -47,6 +49,7 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "fork-ts-checker-webpack-plugin": "^6.0.0",
     "jest": "29.5.0",
     "jest-cucumber": "^4.4.0",
     "prettier": "^2.3.2",
@@ -57,8 +60,7 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.0.0",
-    "webpack": "^5.0.0",
-    "fork-ts-checker-webpack-plugin": "^6.0.0"
+    "webpack": "^5.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
