--- a/k8s/cloud/deployment.yml
+++ b/k8s/cloud/deployment.yml
@@ -31,7 +31,7 @@ spec:
         resources:
           requests:
             cpu: 10m
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         env:
           - name: MONGO_CONNECTION_STRING
             valueFrom:
