--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^10.3.10",
     "@nestjs/swagger": "^7.4.0",
     "class-validator": "^0.14.1",
+    "helmet": "^7.1.0",
     "mongoose": "^8.5.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
@@ -47,6 +48,7 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "fork-ts-checker-webpack-plugin": "^6.0.0",
     "jest": "29.5.0",
     "jest-cucumber": "^4.4.0",
     "prettier": "^2.3.2",
@@ -57,8 +59,7 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.0.0",
-    "webpack": "^5.0.0",
-    "fork-ts-checker-webpack-plugin": "^6.0.0"
+    "webpack": "^5.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
