--- a/k8s/cloud/configmap.yml
+++ b/k8s/cloud/configmap.yml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: product-ms-config
 data:
-  MONGO_CONNECTION_STRING: mongodb+srv://order-manager-admin:KXdkKCNplaugWJA6@cluster0.uszjg.mongodb.net/product?retryWrites=true&w=majority&appName=Cluster0
+  MONGO_CONNECTION_STRIN: mongodb+srv://order-manager-admin:KXdkKCNplaugWJA6@cluster0.uszjg.mongodb.net/product?retryWrites=true&w=majority&appName=Cluster0
 
 
 
