--- a/k8s/cloud/configmap.yml
+++ b/k8s/cloud/configmap.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: product-ms-config
+  name: data
 data:
   MONGO_CONNECTION_STRIN: mongodb+srv://order-manager-admin:KXdkKCNplaugWJA6@cluster0.uszjg.mongodb.net/product?retryWrites=true&w=majority&appName=Cluster0
 
