--- a/k8s/cloud/deployment.yml
+++ b/k8s/cloud/deployment.yml
@@ -33,31 +33,11 @@ spec:
             cpu: 10m
         imagePullPolicy: Always
         env:
-          - name: MONGO_CONNECTION_STRIN
+          - name: MONGO_CONNECTION_STRING
             valueFrom:
               configMapKeyRef:
                 name: data
-                key: MONGO_CONNECTION_STRIN
-        #   - name: SQS_ACCESS_KEY_ID
-        #     valueFrom:
-        #       configMapKeyRef:
-        #         name: sqs-credentials
-        #         key: SQS_ACCESS_KEY_ID
-        #   - name: SQS_SECRET_ACCESS_KEY
-        #     valueFrom:
-        #       configMapKeyRef:
-        #         name: sqs-credentials
-        #         key: SQS_SECRET_ACCESS_KEY
-                
-        #   - name: SQS_URL
-        #     value: "https://sqs.us-east-1.amazonaws.com/975050002971/NEW_ORDER"
-        #   - name: SQS_NEW_CHARGE_URL
-        #     value: "https://sqs.us-east-1.amazonaws.com/975050002971/NEW_CHARGE"
-        #   - name: SQS_REGION
-        #     value: "us-east-1"     
-        #   - name: SQS_QUEUE_NAME
-        #     value: "NEW_ORDER"
-          
+                key: MONGO_CONNECTION_STRING          
 
 ---
 apiVersion: v1
